# DA-2024-TPs

./: CMakeLists.txt
TP1/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  tests.cpp
TP2/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp
TP3/: MSTTestAux.h  ex1.cpp  ex2.cpp  ex3.cpp
TP4/: ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex9.cpp  exercises.h
TP5/: ex1.cpp  ex2.cpp  ex3.cpp  exercises.h  testAux.h
TP7/: ex1.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  exercises.h
data_structures/: Graph.h  Heap.cpp  MutablePriorityQueue.h  UFDS.h
running_examples/closest_point_pair/: ClosestPointPair.cpp
